--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -48,6 +48,7 @@ boxplot(WORDSUM~DEGREE,data=mydata)
 favstats(WORDSUM~DEGREE,data=mydata)
 ```
 
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
@@ -56,6 +57,11 @@ favstats(WORDSUM~DEGREE,data=mydata)
 ```{r}
 model1 <- aov(WORDSUM~DEGREE,data=mydata)
 summary.aov(model1)
+```
+```{r}
+#we specify the margins starting at the bottom and proceeding clockwise - thus 8.7 is the left side margin to hold the names of the factors
+par(mar = c(3, 12, 2, 2))
+plot(TukeyHSD(model1),las=2)
 ```
 
 # Discussion and Conclusion
